# uefi-musl-toolchain

./: .gitmodules  CMakeLists.txt  GccBase.lds  Makefile  elf2efi  generate-specs.sh  musl-gcc.specs  prepare.sh
include/: common.h  list.h
prebuilts/: GenFw
src/: entry.c
start/: CMakeLists.txt
start/include/: common.h  list.h  syscalls.h
start/src/: entry.c  printf.c  syscalls.c
start/src/arm/: longjmp_stack.s  setjmp_stack.s
